# energy-sandbox

./: DISCLAIMER.md  NOTICE  README.md  package-lock.json  package.json
bop-guardian/: .gitignore  LICENSE  README.md  app.yaml  databricks.yml
co2-eor-twin/: README.md  app.yaml  databricks.yml  package-lock.json  package.json  tsconfig.json
esp-pm/: README.md  app.yaml  databricks.yml  requirements.txt  seed_demo_data.py
las-viewer/: .gitignore  README.md  app.py  app.yaml  databricks.yml  requirements.txt
oil-pump-monitor/: .gitignore  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
oil-pump-monitor/Quick-start/: One_Pager.html
oil-pump-monitor/frontend/: index.html  package-lock.json  package.json
oil-pump-monitor/frontend/src/: App.tsx
oil-pump-monitor/frontend/src/components/: AlertPanel.tsx  DataFlowDiagram.tsx  FieldMap.tsx  GenieChat.tsx  LiveMetrics.tsx  PumpSelector.tsx  SpectrumChart.tsx  WaveformChart.tsx
oil-pump-monitor/frontend/src/hooks/: useApi.ts
oil-pump-monitor/frontend/src/types/: index.ts
oil-pump-monitor/server/: agent.py  config.py  db.py  schema.py  simulator.py
oil-pump-monitor/server/routes/: agent.py  pumps.py
osdu-app-with-connector/: .gitignore  README.md  databricks.yml  requirements.txt
pipeline-command-center/: README.md  app.yaml
reservoir-simulator/: .gitignore  LICENSE  NOTICE  README.md  app.py  app.yaml  databricks.yml  requirements.txt
rop-prediction/: .gitignore  CONTRIBUTING.md  README.md  app.yaml  databricks.yml
subsea-drone-autopilot/: .gitignore  LICENSE  NOTICE  (+3 more)
(+201 files in other folders)
